--- a/adpll.qsf
+++ b/adpll.qsf
@@ -366,3 +366,5 @@ set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
 set_global_assignment -name VHDL_FILE adpll_top.vhd
 set_global_assignment -name QIP_FILE pll_sysclk.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name QIP_FILE TEST/lpf1.qip
+set_global_assignment -name SIP_FILE TEST/lpf1.sip
