--- a/adpll.qsf
+++ b/adpll.qsf
@@ -368,3 +368,8 @@ set_global_assignment -name QIP_FILE pll_sysclk.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name QIP_FILE TEST/lpf1.qip
 set_global_assignment -name SIP_FILE TEST/lpf1.sip
+set_global_assignment -name QIP_FILE MATH/int32_fp.qip
+set_global_assignment -name QIP_FILE fp_int32.qip
+set_global_assignment -name QIP_FILE math/fp_mult.qip
+set_global_assignment -name QIP_FILE fp_add.qip
+set_global_assignment -name QIP_FILE math/fp_sub.qip
